LU-3331 llite: remove llite proc root on init failure

In init_lustre_lite() ensure that /proc/fs/lustre/llite is removed in
case of failure. Generally rework the cleanup code in this function.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I95844622dd39d2529d227b99fffbc938fd17910a