lustre/llite/super25.c
@@ -67,24 +67,6 @@ static void ll_destroy_inode(struct inode *inode)
         OBD_SLAB_FREE_PTR(ptr, ll_inode_cachep);
 }
 
-int ll_init_inodecache(void)
-{
-        ll_inode_cachep = cfs_mem_cache_create("lustre_inode_cache",
-                                               sizeof(struct ll_inode_info),
-                                               0, CFS_SLAB_HWCACHE_ALIGN);
-        if (ll_inode_cachep == NULL)
-                return -ENOMEM;
-        return 0;
-}
-
-void ll_destroy_inodecache(void)
-{
-        int rc;
-
-        rc = cfs_mem_cache_destroy(ll_inode_cachep);
-        LASSERTF(rc == 0, "ll_inode_cache: not all structures were freed\n");
-}
-
 /* exported operations */
 struct super_operations lustre_super_operations =
 {
@@ -111,9 +93,10 @@ void vvp_global_fini(void);
 
 static int __init init_lustre_lite(void)
 {
-	int i, rc, seed[2];
-	struct timeval tv;
+	struct proc_dir_entry *entry;
 	lnet_process_id_t lnet_id;
+	struct timeval tv;
+	int i, rc, seed[2];
 
 	CLASSERT(sizeof(LUSTRE_VOLATILE_HDR) == LUSTRE_VOLATILE_HDR_LEN + 1);
 
@@ -123,106 +106,127 @@ static int __init init_lustre_lite(void)
 	CDEBUG(D_INFO, "Lustre client module (%p).\n",
 	       &lustre_super_operations);
 
-        rc = ll_init_inodecache();
-        if (rc)
-                return -ENOMEM;
-        ll_file_data_slab = cfs_mem_cache_create("ll_file_data",
-                                                 sizeof(struct ll_file_data), 0,
-                                                 CFS_SLAB_HWCACHE_ALIGN);
-        if (ll_file_data_slab == NULL) {
-                ll_destroy_inodecache();
-                return -ENOMEM;
-        }
+	ll_inode_cachep = cfs_mem_cache_create("lustre_inode_cache",
+					       sizeof(struct ll_inode_info),
+					       0, CFS_SLAB_HWCACHE_ALIGN);
+	if (ll_inode_cachep == NULL)
+		GOTO(out_cache, rc = -ENOMEM);
 
-        ll_remote_perm_cachep = cfs_mem_cache_create("ll_remote_perm_cache",
-                                                  sizeof(struct ll_remote_perm),
-                                                      0, 0);
-        if (ll_remote_perm_cachep == NULL) {
-                cfs_mem_cache_destroy(ll_file_data_slab);
-                ll_file_data_slab = NULL;
-                ll_destroy_inodecache();
-                return -ENOMEM;
-        }
+	ll_file_data_slab = cfs_mem_cache_create("ll_file_data",
+						 sizeof(struct ll_file_data), 0,
+						 CFS_SLAB_HWCACHE_ALIGN);
+	if (ll_file_data_slab == NULL)
+		GOTO(out_cache, rc = -ENOMEM);
 
-        ll_rmtperm_hash_cachep = cfs_mem_cache_create("ll_rmtperm_hash_cache",
-                                                   REMOTE_PERM_HASHSIZE *
-                                                   sizeof(cfs_list_t),
-                                                   0, 0);
-        if (ll_rmtperm_hash_cachep == NULL) {
-                cfs_mem_cache_destroy(ll_remote_perm_cachep);
-                ll_remote_perm_cachep = NULL;
-                cfs_mem_cache_destroy(ll_file_data_slab);
-                ll_file_data_slab = NULL;
-                ll_destroy_inodecache();
-                return -ENOMEM;
-        }
+	ll_remote_perm_cachep = cfs_mem_cache_create("ll_remote_perm_cache",
+						sizeof(struct ll_remote_perm),
+						     0, 0);
+	if (ll_remote_perm_cachep == NULL)
+		GOTO(out_cache, rc = -ENOMEM);
 
-        proc_lustre_fs_root = proc_lustre_root ?
-                              lprocfs_register("llite", proc_lustre_root, NULL, NULL) : NULL;
+	ll_rmtperm_hash_cachep = cfs_mem_cache_create("ll_rmtperm_hash_cache",
+						      REMOTE_PERM_HASHSIZE *
+						      sizeof(cfs_list_t),
+						      0, 0);
+	if (ll_rmtperm_hash_cachep == NULL)
+		GOTO(out_cache, rc = -ENOMEM);
 
-        lustre_register_client_fill_super(ll_fill_super);
-        lustre_register_kill_super_cb(ll_kill_super);
+	entry = lprocfs_register("llite", proc_lustre_root, NULL, NULL);
+	if (IS_ERR(entry)) {
+		rc = PTR_ERR(entry);
+		CERROR("cannot register '/proc/fs/lustre/llite': rc = %d\n",
+		       rc);
+		GOTO(out_cache, rc);
+	}
+	proc_lustre_fs_root = entry;
 
-        lustre_register_client_process_config(ll_process_config);
+	cfs_get_random_bytes(seed, sizeof(seed));
 
-        cfs_get_random_bytes(seed, sizeof(seed));
+	/* Nodes with small feet have little entropy
+	 * the NID for this node gives the most entropy in the low bits */
+	for (i = 0;; i++) {
+		if (LNetGetId(i, &lnet_id) == -ENOENT)
+			break;
 
-        /* Nodes with small feet have little entropy
-         * the NID for this node gives the most entropy in the low bits */
-        for (i=0; ; i++) {
-                if (LNetGetId(i, &lnet_id) == -ENOENT) {
-                        break;
-                }
-                if (LNET_NETTYP(LNET_NIDNET(lnet_id.nid)) != LOLND) {
-                        seed[0] ^= LNET_NIDADDR(lnet_id.nid);
-                }
-        }
+		if (LNET_NETTYP(LNET_NIDNET(lnet_id.nid)) != LOLND)
+			seed[0] ^= LNET_NIDADDR(lnet_id.nid);
+	}
 
-        cfs_gettimeofday(&tv);
-        cfs_srand(tv.tv_sec ^ seed[0], tv.tv_usec ^ seed[1]);
+	cfs_gettimeofday(&tv);
+	cfs_srand(tv.tv_sec ^ seed[0], tv.tv_usec ^ seed[1]);
 
-        init_timer(&ll_capa_timer);
-        ll_capa_timer.function = ll_capa_timer_callback;
-        rc = ll_capa_thread_start();
-        /*
-         * XXX normal cleanup is needed here.
-         */
-        if (rc == 0)
-                rc = vvp_global_init();
+	init_timer(&ll_capa_timer);
+	ll_capa_timer.function = ll_capa_timer_callback;
+	rc = ll_capa_thread_start();
+	if (rc != 0)
+		GOTO(out_proc, rc);
 
-        return rc;
+	rc = vvp_global_init();
+	if (rc != 0)
+		GOTO(out_capa, rc);
+
+	lustre_register_client_fill_super(ll_fill_super);
+	lustre_register_kill_super_cb(ll_kill_super);
+	lustre_register_client_process_config(ll_process_config);
+
+	GOTO(out, rc = 0);
+out_capa:
+	ll_capa_thread_stop();
+	del_timer(&ll_capa_timer);
+out_proc:
+	lprocfs_remove(&proc_lustre_fs_root);
+out_cache:
+	if (ll_inode_cachep != NULL)
+		cfs_mem_cache_destroy(ll_inode_cachep);
+	ll_inode_cachep = NULL;
+
+	if (ll_file_data_slab != NULL)
+		cfs_mem_cache_destroy(ll_file_data_slab);
+	ll_file_data_slab = NULL;
+
+	if (ll_remote_perm_cachep != NULL)
+		cfs_mem_cache_destroy(ll_remote_perm_cachep);
+	ll_remote_perm_cachep = NULL;
+
+	if (ll_rmtperm_hash_cachep != NULL)
+		cfs_mem_cache_destroy(ll_rmtperm_hash_cachep);
+	ll_rmtperm_hash_cachep = NULL;
+out:
+	return rc;
 }
 
 static void __exit exit_lustre_lite(void)
 {
-        int rc;
+	int rc;
 
-        vvp_global_fini();
-        del_timer(&ll_capa_timer);
-        ll_capa_thread_stop();
-        LASSERTF(capa_count[CAPA_SITE_CLIENT] == 0,
-                 "client remaining capa count %d\n",
-                 capa_count[CAPA_SITE_CLIENT]);
+	lustre_register_client_fill_super(NULL);
+	lustre_register_kill_super_cb(NULL);
+	lustre_register_client_process_config(NULL);
 
-        lustre_register_client_fill_super(NULL);
-        lustre_register_kill_super_cb(NULL);
+	lprocfs_remove(&proc_lustre_fs_root);
 
-        lustre_register_client_process_config(NULL);
+	vvp_global_fini();
+	del_timer(&ll_capa_timer);
+	ll_capa_thread_stop();
+	LASSERTF(capa_count[CAPA_SITE_CLIENT] == 0,
+		 "client remaining capa count %d\n",
+		 capa_count[CAPA_SITE_CLIENT]);
 
-        ll_destroy_inodecache();
+	rc = cfs_mem_cache_destroy(ll_inode_cachep);
+	LASSERTF(rc == 0, "ll_inode_cache: not all structures were freed\n");
+	ll_inode_cachep = NULL;
 
-        rc = cfs_mem_cache_destroy(ll_rmtperm_hash_cachep);
-        LASSERTF(rc == 0, "couldn't destroy ll_rmtperm_hash_cachep\n");
-        ll_rmtperm_hash_cachep = NULL;
+	rc = cfs_mem_cache_destroy(ll_rmtperm_hash_cachep);
+	LASSERTF(rc == 0, "couldn't destroy ll_rmtperm_hash_cachep\n");
+	ll_rmtperm_hash_cachep = NULL;
 
-        rc = cfs_mem_cache_destroy(ll_remote_perm_cachep);
-        LASSERTF(rc == 0, "couldn't destroy ll_remote_perm_cachep\n");
-        ll_remote_perm_cachep = NULL;
+	rc = cfs_mem_cache_destroy(ll_remote_perm_cachep);
+	LASSERTF(rc == 0, "couldn't destroy ll_remote_perm_cachep\n");
+	ll_remote_perm_cachep = NULL;
 
-        rc = cfs_mem_cache_destroy(ll_file_data_slab);
-        LASSERTF(rc == 0, "couldn't destroy ll_file_data slab\n");
-        if (proc_lustre_fs_root)
-                lprocfs_remove(&proc_lustre_fs_root);
+	rc = cfs_mem_cache_destroy(ll_file_data_slab);
+	LASSERTF(rc == 0, "couldn't destroy ll_file_data slab\n");
+	ll_file_data_slab = NULL;
 }
 
 MODULE_AUTHOR("Sun Microsystems, Inc. <http://www.lustre.org/>");
